# digitrek

./: .gitignore  Cargo.toml  LICENSE  README.md  audio  build_wasm  ideas.md
.github/workflows/: publish.yml
assets/: boom.bfxr  boom.csd  end.csd  launch.bfxr  launch.csd  miss.bfxr  miss.csd  wave.bfxr  words_3.rs  words_4.rs  words_5.rs  words_6.rs
scripts/: audio  build_wasm  font  font.py  tidy  words
src/: credits.rs  events.rs  font_store.rs  game.rs  keys.rs  main.rs  menu.rs  msg.rs  palette.rs  screenshot.rs  starfield.wgsl
wasm/: index.html  manifest.json  restart_audio_context.js  service_worker.js
