[package]
name = "digitrek"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.0"
bevy_pkv = "0.15.0"
rand = "0.10.0"
serde = "1.0.228"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
open = "5.3.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.111"
web-sys = { version = "0.3.88", features = ["Window"] }
getrandom = { version = "0.4.1", features = ["wasm_js"] }

[features]
invincible = []
show_local_points = []
one_key = []
min_delay = []
speedup = []
