[package]
name = "digitrek"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19.0", features = ["bevy_settings", "bevy_ui_widgets"] }
rand = "0.10.1"
ttf-parser = "0.25.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
open = "5.3.5"
directories = "6.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.126"
js-sys = "0.3.103"
web-sys = { version = "0.3.103", features = [
    "Window",
    "IdbFactory",
    "IdbOpenDbRequest",
    "IdbDatabase",
    "IdbTransaction",
    "IdbObjectStore",
    "IdbRequest",
    "IdbTransactionMode",
    "Event",
    "EventTarget",
    "FileList",
    "File",
    "Blob",
    "FileReader",
    "Document",
    "DragEvent",
    "DataTransfer",
    "MouseEvent",
] }
getrandom = { version = "0.4.3", features = ["wasm_js"] }

[features]
invincible = []
show_local_points = []
min_delay = []
no_obstacles = []
one_foe = []
speedup = []
screenshot = []
